fix the header and footer. canvas was overflowing above and beneath them.

--- a/app/assets/styles/modules/_footer.css
+++ b/app/assets/styles/modules/_footer.css
@@ -1,25 +1,43 @@
 .footer {
     background-color: #20252d;
-    height: 20%;
+    height: 18em;
     color: #ffffff;
-
-   &__hours-heading {
-     width: 100%;
-     padding-top: 3em;
-     text-align: center;
-
-     span {
-        display: block;
-        margin-bottom: 1em;
-     }
-   }
 
    &__hours_wrapper {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr;
-      grid-row-gap: 0.5em;
+      grid-template-rows: auto(1fr);
+      grid-row-gap: 1em;
+      grid-column-gap: 0.5em;
       text-align: center;
-      margin-bottom: 2em;
+      margin-bottom: 6em;
+      transform: translateY(2em);
+
+      @mixin atSmall {
+         grid-template-columns: 1fr;
+         grid-column-gap: 1em;
+         justify-items: end;
+         margin-right: 5em;
+      }
+   }
+
+   &__header {
+      grid-column: 1/3;
+      grid-row: 1/2;
+
+      @mixin atSmall {
+         grid-column: 1/1;
+         grid-row: 1/1;
+      }
+   }
+
+   &__sub-header {
+      grid-column: 1/3;
+      grid-row: 2/3;
+
+      @mixin atSmall {
+         grid-column: 1/1;
+         grid-row: 2/2;
+      }
    }
 }
